// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataViewTable component should render a basic table correctly 1`] = `
<div>
  <table
    aria-label="Repositories table"
    class="pf-v6-c-table pf-m-grid-md"
    data-ouia-component-id="TableExample"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
      data-ouia-component-id="TableExample-thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-head"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-0"
          scope="col"
          tabindex="-1"
        >
          Repositories
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-1"
          scope="col"
          tabindex="-1"
        >
          Branches
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-2"
          scope="col"
          tabindex="-1"
        >
          Pull requests
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-3"
          scope="col"
          tabindex="-1"
        >
          Workspaces
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-4"
          scope="col"
          tabindex="-1"
        >
          Last commit
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-0"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-0"
          tabindex="-1"
        >
          Repository one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-1"
          tabindex="-1"
        >
          Branch one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-2"
          tabindex="-1"
        >
          Pull request one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-3"
          tabindex="-1"
        >
          Workspace one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-4"
          tabindex="-1"
        >
          Timestamp one
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-1"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-0"
          tabindex="-1"
        >
          Repository two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-1"
          tabindex="-1"
        >
          Branch two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-2"
          tabindex="-1"
        >
          Pull request two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-3"
          tabindex="-1"
        >
          Workspace two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-4"
          tabindex="-1"
        >
          Timestamp two
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-2"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-0"
          tabindex="-1"
        >
          Repository three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-1"
          tabindex="-1"
        >
          Branch three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-2"
          tabindex="-1"
        >
          Pull request three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-3"
          tabindex="-1"
        >
          Workspace three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-4"
          tabindex="-1"
        >
          Timestamp three
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-3"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-0"
          tabindex="-1"
        >
          Repository four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-1"
          tabindex="-1"
        >
          Branch four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-2"
          tabindex="-1"
        >
          Pull request four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-3"
          tabindex="-1"
        >
          Workspace four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-4"
          tabindex="-1"
        >
          Timestamp four
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-4"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-0"
          tabindex="-1"
        >
          Repository five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-1"
          tabindex="-1"
        >
          Branch five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-2"
          tabindex="-1"
        >
          Pull request five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-3"
          tabindex="-1"
        >
          Workspace five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-4"
          tabindex="-1"
        >
          Timestamp five
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-5"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-0"
          tabindex="-1"
        >
          Repository six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-1"
          tabindex="-1"
        >
          Branch six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-2"
          tabindex="-1"
        >
          Pull request six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-3"
          tabindex="-1"
        >
          Workspace six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-4"
          tabindex="-1"
        >
          Timestamp six
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataViewTable component should render a tree table correctly 1`] = `
<div>
  <table
    aria-label="Repositories table"
    class="pf-v6-c-table pf-m-tree-view-grid-md pf-m-tree-view"
    data-ouia-component-id="TableExample"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="treegrid"
  >
    <thead
      class="pf-v6-c-table__thead"
      data-ouia-component-id="TableExample-thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-head"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-0"
          scope="col"
          tabindex="-1"
        >
          Repositories
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-1"
          scope="col"
          tabindex="-1"
        >
          Branches
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-2"
          scope="col"
          tabindex="-1"
        >
          Pull requests
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-3"
          scope="col"
          tabindex="-1"
        >
          Workspaces
        </th>
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="TableExample-th-4"
          scope="col"
          tabindex="-1"
        >
          Last commit
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        aria-expanded="false"
        aria-level="1"
        aria-posinset="1"
        aria-setsize="2"
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-0"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__td pf-v6-c-table__tree-view-title-cell"
          data-ouia-component-id="TableExample-td-0-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-table__tree-view-main"
          >
            <span
              class="pf-v6-c-table__toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Expand row 0"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="0"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <div
                    class="pf-v6-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      />
                    </svg>
                  </div>
                </span>
              </button>
            </span>
            <div
              class="pf-v6-c-table__tree-view-text"
            >
              <span
                class="pf-v6-c-table__text"
              >
                Repository one
              </span>
            </div>
            <span
              class="pf-v6-c-table__tree-view-details-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Show row details"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-2"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <span
                    class="pf-v6-c-table__details-toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </th>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-1"
          tabindex="-1"
        >
          Branch one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-2"
          tabindex="-1"
        >
          Pull request one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-3"
          tabindex="-1"
        >
          Workspace one
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-0-4"
          tabindex="-1"
        >
          Timestamp one
        </td>
      </tr>
      <tr
        aria-expanded="false"
        aria-level="2"
        aria-posinset="1"
        aria-setsize="0"
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-1"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
        hidden=""
      >
        <th
          class="pf-v6-c-table__td pf-v6-c-table__tree-view-title-cell"
          data-ouia-component-id="TableExample-td-1-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-table__tree-view-main"
          >
            <div
              class="pf-v6-c-table__tree-view-text"
            >
              <span
                class="pf-v6-c-table__text"
              >
                Repository two
              </span>
            </div>
            <span
              class="pf-v6-c-table__tree-view-details-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Show row details"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <span
                    class="pf-v6-c-table__details-toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </th>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-1"
          tabindex="-1"
        >
          Branch two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-2"
          tabindex="-1"
        >
          Pull request two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-3"
          tabindex="-1"
        >
          Workspace two
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-1-4"
          tabindex="-1"
        >
          Timestamp two
        </td>
      </tr>
      <tr
        aria-expanded="false"
        aria-level="2"
        aria-posinset="2"
        aria-setsize="0"
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-2"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
        hidden=""
      >
        <th
          class="pf-v6-c-table__td pf-v6-c-table__tree-view-title-cell"
          data-ouia-component-id="TableExample-td-2-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-table__tree-view-main"
          >
            <div
              class="pf-v6-c-table__tree-view-text"
            >
              <span
                class="pf-v6-c-table__text"
              >
                Repository three
              </span>
            </div>
            <span
              class="pf-v6-c-table__tree-view-details-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Show row details"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-4"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <span
                    class="pf-v6-c-table__details-toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </th>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-1"
          tabindex="-1"
        >
          Branch three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-2"
          tabindex="-1"
        >
          Pull request three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-3"
          tabindex="-1"
        >
          Workspace three
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-2-4"
          tabindex="-1"
        >
          Timestamp three
        </td>
      </tr>
      <tr
        aria-expanded="false"
        aria-level="1"
        aria-posinset="2"
        aria-setsize="1"
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-3"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__td pf-v6-c-table__tree-view-title-cell"
          data-ouia-component-id="TableExample-td-3-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-table__tree-view-main"
          >
            <span
              class="pf-v6-c-table__toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Expand row 3"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-5"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <div
                    class="pf-v6-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      />
                    </svg>
                  </div>
                </span>
              </button>
            </span>
            <div
              class="pf-v6-c-table__tree-view-text"
            >
              <span
                class="pf-v6-c-table__text"
              >
                Repository four
              </span>
            </div>
            <span
              class="pf-v6-c-table__tree-view-details-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Show row details"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-6"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <span
                    class="pf-v6-c-table__details-toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </th>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-1"
          tabindex="-1"
        >
          Branch four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-2"
          tabindex="-1"
        >
          Pull request four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-3"
          tabindex="-1"
        >
          Workspace four
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-3-4"
          tabindex="-1"
        >
          Timestamp four
        </td>
      </tr>
      <tr
        aria-expanded="false"
        aria-level="2"
        aria-posinset="1"
        aria-setsize="0"
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-4"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
        hidden=""
      >
        <th
          class="pf-v6-c-table__td pf-v6-c-table__tree-view-title-cell"
          data-ouia-component-id="TableExample-td-4-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-table__tree-view-main"
          >
            <div
              class="pf-v6-c-table__tree-view-text"
            >
              <span
                class="pf-v6-c-table__text"
              >
                Repository five
              </span>
            </div>
            <span
              class="pf-v6-c-table__tree-view-details-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Show row details"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-7"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <span
                    class="pf-v6-c-table__details-toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </th>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-1"
          tabindex="-1"
        >
          Branch five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-2"
          tabindex="-1"
        >
          Pull request five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-3"
          tabindex="-1"
        >
          Workspace five
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-4-4"
          tabindex="-1"
        >
          Timestamp five
        </td>
      </tr>
      <tr
        aria-expanded="false"
        aria-level="1"
        aria-posinset="3"
        aria-setsize="0"
        class="pf-v6-c-table__tr"
        data-ouia-component-id="TableExample-tr-5"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__td pf-v6-c-table__tree-view-title-cell"
          data-ouia-component-id="TableExample-td-5-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-table__tree-view-main"
          >
            <div
              class="pf-v6-c-table__tree-view-text"
            >
              <span
                class="pf-v6-c-table__text"
              >
                Repository six
              </span>
            </div>
            <span
              class="pf-v6-c-table__tree-view-details-toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Show row details"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-8"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                tabindex="-1"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <span
                    class="pf-v6-c-table__details-toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </th>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-1"
          tabindex="-1"
        >
          Branch six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-2"
          tabindex="-1"
        >
          Pull request six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-3"
          tabindex="-1"
        >
          Workspace six
        </td>
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="TableExample-td-5-4"
          tabindex="-1"
        >
          Timestamp six
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
